[package]
name = "arbor-cli"
version = "0.1.0"
edition = "2021"
authors = ["Can Vardar <https://github.com/icanvardar>"]
description = "A trie-based auto-completion tool."
readme = "./README.md"
license-file = "./LICENSE"
keywords = ["autocomplete", "cli", "trie"]

[dependencies]
bincode = "1.3.3"
tokio = { version = "1.40.0", features = ["full"] }
dirs = { version = "4.0" }
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
